# sudoku

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  benchmark.sh  pyproject.toml  setup.py  solver  solver_strict  sudoku.h  sudoku_solver.c  sudoku_wrapper.py  test.sh  test_sudoku_wrapper.py
.github/workflows/: ci.yml
analysis/: histogram.ps  histogram.txt  make_histogram.sh  nbacktracks.txt  plot.gnu  plot_histogram.py  render.sh  render_sudoku.py  requirements.txt  top10.txt
examples/: README.md  hard_puzzle.txt  python_usage.py  python_usage_new.py
sudoku/: __init__.py  sudoku_wrapper.py
sudoku_solver/: __init__.py  sudoku_wrapper.py
tests/: test_sudoku.py
