[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-solver"
version = "1.0.0"
description = "A fast sudoku solver using constraint propagation and backtracking"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Hugo Penedones", email = "hpenedones@gmail.com"}
]
keywords = ["sudoku", "solver", "puzzle", "constraint-propagation", "backtracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https://github.com/hpenedones/sudoku"
"Bug Reports" = "https://github.com/hpenedones/sudoku/issues"
Source = "https://github.com/hpenedones/sudoku"
